# pyrona

./: .flake8  .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: pr_gate.yaml
examples/: bank_transfer.py  index_comparison.py  merge_sort.py
src/pyrona/: __init__.py  core.py  notice.py  version.py  when.py
tests/: test_freezing.py  test_notices.py  test_object_wrapper.py  test_region.py  test_when.py
