[metadata]
name = pyrona
version = attr: pyrona.__version__
author = Pyrona Team
author_email = pyrona@microsoft.com
description = Pyrona is a Python package that simulates a Behavior-oriented Concurrency runtime for Python.
long_description = file: README.md
keywords = verona, boc
license = MIT
classifiers =
    ProgrammingLanguage :: Python :: 3

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests

[options.extras_require]
test = 
    pytest-md
    pytest-emoji
    pytest-cov
    pytest
linting =
    flake8
    flake8-bugbear==22.10.27
    flake8-builtins
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    pep8-naming
examples =
    yfinance
    requests
    requests_cache
    requests_limiter
    pyrate_limiter
    pandas
